Add local database url to env

--- a/example.env
+++ b/example.env
@@ -1,7 +1,11 @@
 # Security
-AUTH_SECRET_KEY: SECRET_KEY
-GEN_SALT_ROUNDS: 7
+AUTH_SECRET_KEY="SECRET_KEY"
+GEN_SALT_ROUNDS=7
 
 # Database
-MONGO_DB_URL: "mongodb://{user}:{password}@{host}:{port}/"
+MONGO_DB_URL="mongodb://{user}:{password}@{host}:{port}/"
 MONGO_DB_NAME="todo_list_db"
+LOCAL_DATABASE_URL=sqlite+aiosqlite:///db/todo_list.sqlite3
+
+# Debug
+DEBUG_MODE=false
