--- a/example.env
+++ b/example.env
@@ -1,7 +1,16 @@
 # Security
-AUTH_SECRET_KEY: SECRET_KEY
-GEN_SALT_ROUNDS: 7
+AUTH_SECRET_KEY="SECRET_KEY"
+GEN_SALT_ROUNDS=7
 
 # Database
-MONGO_DB_URL: "mongodb://{user}:{password}@{host}:{port}/"
+MONGO_DB_URL="mongodb://{user}:{password}@{host}:{port}/"
 MONGO_DB_NAME="todo_list_db"
+
+# Redis
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_URL="redis://[username]:[password]@localhost:6379/0"
+
+# Debug
+DEBUG_MODE=false
