--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,6 +3,9 @@ python-multipart==0.0.20
 asyncio==3.4.3
 uvicorn==0.22.0
 
+# Dependency Injection
+dependency-injector==4.48.3
+
 bcrypt==4.3.0
 PyJWT==2.10.1
 pymongo==4.13.2
