--- a/example.env
+++ b/example.env
@@ -11,7 +11,7 @@ LOCAL_DATABASE_URL=sqlite+aiosqlite:///db/todo_list.sqlite3
 REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_DB=0
-REDIS_URL="redis://[username]:[password]@localhost:6379/0"
+REDIS_URL="redis://localhost:6379/0"
 
 # Debug
 DEBUG_MODE=false
