fix: ModuleNotFoundError: No module named 'yaml'

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.12
 python-multipart==0.0.20
 asyncio==3.4.3
 uvicorn==0.22.0
+PyYAML==6.0.3
 
 # Dependency Injection
 dependency-injector==4.48.3
